# versionlens

./: .gitignore  .versionlens-ignore.example  Cargo.toml  LICENSE  README.md  extension.toml
.claude/commands/pm/: epic-merge.md  epic-start-worktree.md  epic-start.md  epic-sync.md
.claude/epics/zed-versionlens/: 10.md  3.md  4-analysis.md  4.md  5-analysis.md  5.md  6-analysis.md  6.md  7.md  8.md  9-analysis.md  9.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/zed-versionlens/updates/10/: stream-A.md
.claude/epics/zed-versionlens/updates/4/: stream-A.md  stream-B.md  stream-C.md
.claude/epics/zed-versionlens/updates/5/: stream-A.md
.claude/epics/zed-versionlens/updates/6/: stream-A.md  stream-B.md  stream-C.md
.claude/epics/zed-versionlens/updates/7/: stream-A.md
.claude/epics/zed-versionlens/updates/8/: stream-A.md
.claude/epics/zed-versionlens/updates/9/: stream-A.md  stream-B.md
.claude/prds/: zed-versionlens.md
.claude/rules/: branch-operations.md  worktree-operations.md
ccpm/: CONTEXT_ACCURACY.md
src/: lib.rs  state.rs
src/cache/: file_cache.rs  mod.rs
src/commands/: cache_commands.rs  mod.rs  ui_commands.rs
src/config/: settings.rs
src/events/: buffer.rs  debouncer.rs  mod.rs
src/parsers/: cargo.rs  gemfile.rs  go.rs  mod.rs  npm.rs  pubspec.rs  pyproject.rs  types.rs
src/registry/: crates.rs  go.rs  mod.rs  npm.rs  pubdev.rs  pypi.rs  rubygems.rs
src/ui/: badges.rs  decorations.rs  mod.rs
src/version/: comparison.rs
