[package]
name = "zed-versionlens"
version = "0.0.1"
edition = "2021"
authors = ["ImBIOS <imbios@users.noreply.github.com>"]
description = "Display version information for dependencies in package files"
repository = "https://github.com/ImBIOS/zed-versionlens"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
