[package]
name = "versionlens"
version = "0.0.1"
edition = "2024"
authors = ["Imamuzzaki Abu Salam <imamuzzaki@gmail.com>"]
description = "Display version information for dependencies in package files"
repository = "https://github.com/ImBIOS/versionlens"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
